--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Audiowalk - Yet another amazing AngularJS app</title>
+  <title>Brave New Work</title>
   <meta name="description" content="Yet another amazing AngularJS app">
 
 <!--[if lt IE 9]>
@@ -52,6 +52,7 @@
             <div ng-view></div>
 
   <script src="https://w.soundcloud.com/player/api.js"></script>
+  <script src="https://www.youtube.com/iframe_api"></script>
   <!-- build:js scripts/components.min.js -->
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <!-- bower:js -->
@@ -74,9 +75,12 @@
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers/main.js"></script>
   <script src="scripts/controllers/places.js"></script>
-  <script src="scripts/directives/video_player.js"></script>
-  <script src="scripts/directives/audio_player.js"></script>
+  <script src="scripts/controllers/video.js"></script>
+  <script src="scripts/services/video_player.js"></script>
   <script src="scripts/services/story_board.js"></script>
+  <script src="scripts/directives/audio_player.js"></script>
+  <script src="scripts/directives/video_player.js"></script>
+
   <!-- endbuild -->
 
 </body>
