--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,8 @@
   <script src="bower_components/angular-fitvids/angular-fitvids.js"></script>
   <script src="bower_components/slick-carousel/slick/slick.min.js"></script>
   <script src="bower_components/angular-slick/dist/slick.js"></script>
+  <script src="bower_components/spin.js/spin.js"></script>
+  <script src="bower_components/angular-spinner/angular-spinner.js"></script>
   <!-- endbower -->
   <script src="bower_components/slick-carousel/slick/slick.js"></script>
   <script src="bower_components/bootstrap-custom/ui-bootstrap-custom-0.10.0.js"></script>
