[del] video [add] scroll

--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
   <script src="bower_components/angular-slick/dist/slick.js"></script>
   <script src="bower_components/spin.js/spin.js"></script>
   <script src="bower_components/angular-spinner/angular-spinner.js"></script>
+  <script src="bower_components/angular-scroll/angular-scroll.min.js"></script>
   <!-- endbower -->
   <script src="bower_components/slick-carousel/slick/slick.js"></script>
   <script src="bower_components/bootstrap-custom/ui-bootstrap-custom-0.10.0.js"></script>
