--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 9]> <html class="no-js lt-ie9" lang="en" ng-app="lennart.Audiowalk"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" ng-app="lennart.Audiowalk"> <!--<![endif]-->
 <head>
-
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Brave New Work</title>
@@ -52,6 +52,7 @@
             <div ng-view></div>
 
   <script src="https://w.soundcloud.com/player/api.js"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?libraries=weather,visualization&sensor=false&language=en&v=3.13"></script>
   <script src="https://www.youtube.com/iframe_api"></script>
   <!-- build:js scripts/components.min.js -->
   <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -68,6 +69,9 @@
   <script src="bower_components/spin.js/spin.js"></script>
   <script src="bower_components/angular-spinner/angular-spinner.js"></script>
   <script src="bower_components/angular-scroll/angular-scroll.min.js"></script>
+  <script src="bower_components/angular-fullscreen/src/angular-fullscreen.js"></script>
+  <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+  <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
   <!-- endbower -->
   <script src="bower_components/slick-carousel/slick/slick.js"></script>
   <script src="bower_components/bootstrap-custom/ui-bootstrap-custom-0.10.0.js"></script>
@@ -78,7 +82,9 @@
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers/main.js"></script>
   <script src="scripts/controllers/places.js"></script>
+  <script src="scripts/controllers/place.js"></script>
   <script src="scripts/controllers/video.js"></script>
+  <script src="scripts/controllers/map.js"></script>
   <script src="scripts/services/video_player.js"></script>
   <script src="scripts/services/story_board.js"></script>
   <script src="scripts/directives/audio_player.js"></script>
