--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,7 @@
   <script src="scripts/controllers/place.js"></script>
   <script src="scripts/controllers/video.js"></script>
   <script src="scripts/controllers/map.js"></script>
+  <script src="scripts/controllers/slides.js"></script>
   <script src="scripts/services/video_player.js"></script>
   <script src="scripts/services/story_board.js"></script>
   <script src="scripts/directives/audio_player.js"></script>
