--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
 
   <!-- build:js scripts/app.min.js -->
   <script src="scripts/app.js"></script>
+  <script src="scripts/filters/utils.js"></script>
   <script src="scripts/controllers/main.js"></script>
   <script src="scripts/controllers/places.js"></script>
   <script src="scripts/controllers/place.js"></script>
@@ -90,6 +91,7 @@
   <script src="scripts/services/story_board.js"></script>
   <script src="scripts/directives/audio_player.js"></script>
   <script src="scripts/directives/video_player.js"></script>
+  <script src="scripts/directives/slick.js"></script>
 
   <!-- endbuild -->
 
