--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,7 @@
   <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
   <script src="bower_components/slick-carousel/slick/slick.min.js"></script>
   <script src="bower_components/angular-slick/dist/slick.js"></script>
+  <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
   <!-- endbower -->
   <script src="bower_components/slick-carousel/slick/slick.js"></script>
   <script src="bower_components/bootstrap-custom/ui-bootstrap-custom-0.10.0.js"></script>
