--- a/app/index.html
+++ b/app/index.html
@@ -73,6 +73,7 @@
   <script src="bower_components/slick-carousel/slick/slick.min.js"></script>
   <script src="bower_components/angular-slick/dist/slick.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+  <script src="bower_components/angular-media-player/dist/angular-media-player.min.js"></script>
   <!-- endbower -->
   <script src="bower_components/slick-carousel/slick/slick.js"></script>
   <script src="bower_components/bootstrap-custom/ui-bootstrap-custom-0.10.0.js"></script>
