--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
   <link rel="stylesheet" href="bower_components/angular-motion/dist/angular-motion.min.css" />
+  <link rel="stylesheet" href="bower_components/angular-loading-bar/src/loading-bar.css" />
   <!-- endbower -->
   <link rel="stylesheet" href="bower_components/slick-carousel/slick/slick.css">
 
@@ -74,6 +75,7 @@
   <script src="bower_components/angular-slick/dist/slick.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="bower_components/angular-media-player/dist/angular-media-player.min.js"></script>
+  <script src="bower_components/angular-loading-bar/src/loading-bar.js"></script>
   <!-- endbower -->
   <script src="bower_components/slick-carousel/slick/slick.js"></script>
   <script src="bower_components/bootstrap-custom/ui-bootstrap-custom-0.10.0.js"></script>
@@ -83,14 +85,18 @@
   <!-- build:js scripts/app.min.js -->
   <script src="scripts/app.js"></script>
   <script src="scripts/filters/utils.js"></script>
+
   <script src="scripts/controllers/main.js"></script>
   <script src="scripts/controllers/places.js"></script>
   <script src="scripts/controllers/place.js"></script>
   <script src="scripts/controllers/video.js"></script>
   <script src="scripts/controllers/map.js"></script>
   <script src="scripts/controllers/slides.js"></script>
+
+  <script src="scripts/services/geolocation.js"></script>
   <script src="scripts/services/video_player.js"></script>
   <script src="scripts/services/story_board.js"></script>
+
   <script src="scripts/directives/audio_player.js"></script>
   <script src="scripts/directives/video_player.js"></script>
   <script src="scripts/directives/slick.js"></script>
