--- a/app/index.html
+++ b/app/index.html
@@ -92,12 +92,14 @@
   <script src="scripts/controllers/video.js"></script>
   <script src="scripts/controllers/map.js"></script>
   <script src="scripts/controllers/slides.js"></script>
+  <script src="scripts/controllers/underground.js"></script>
 
   <script src="scripts/services/geolocation.js"></script>
   <script src="scripts/services/video_player.js"></script>
   <script src="scripts/services/story_board.js"></script>
 
   <script src="scripts/directives/audio_player.js"></script>
+  <script src="scripts/directives/scroll.js"></script>
   <script src="scripts/directives/video_player.js"></script>
   <script src="scripts/directives/slick.js"></script>
   <script src="scripts/directives/media_link.js"></script>
