--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,8 @@
 </head>
 
 <body ontouchstart ng-controller="MainCtrl">
-
+    <audio media-player="audioPlayer" data-playlist="audioPlaylist">
+    </audio>
             <div ng-view></div>
 
   <script src="https://w.soundcloud.com/player/api.js"></script>
@@ -76,6 +77,8 @@
   <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="bower_components/angular-media-player/dist/angular-media-player.min.js"></script>
   <script src="bower_components/angular-loading-bar/src/loading-bar.js"></script>
+  <script src="bower_components/WeakMap/WeakMap.js"></script>
+  <script src="bower_components/pointerevents-polyfill/pointerevents.min.js"></script>
   <!-- endbower -->
   <script src="bower_components/slick-carousel/slick/slick.js"></script>
   <script src="bower_components/bootstrap-custom/ui-bootstrap-custom-0.10.0.js"></script>
