better google and apple meta title

--- a/app/index.html
+++ b/app/index.html
@@ -19,10 +19,10 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <!-- Set a shorter title for iOS6 devices when saved to home screen -->
-  <meta name="apple-mobile-web-app-title" content="Audiowalk">
+  <meta name="apple-mobile-web-app-title" content="Brave New Work Audiowalk">
 
   <!-- Properties for Google+ snippets -->
-  <meta property="og:title" content="Audiowalk">
+  <meta property="og:title" content="Brave New Work Audiowalk">
   <meta property="og:description" content="Yet another amazing AngularJS app">
   <meta property="og:image" content="https://github.global.ssl.fastly.net/images/modules/logos_page/Octocat.png">
 
