--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Brave New Work</title>
-  <meta name="description" content="Yet another amazing AngularJS app">
+  <meta name="description" content="Interaktiver Audiowalk">
 
 <!--[if lt IE 9]>
   <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/2.2.0/es5-shim.min.js"></script>
