basic navigation by pages ... animation missing - maybe its not good to do it over routes, audio callbacks missing

--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<!--[if lt IE 9]> <html class="no-js lt-ie9" lang="en" ng-app="lennart.Audiowalk"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en" ng-app="lennart.Audiowalk"> <!--<![endif]-->
+<!--[if lt IE 9]> <html manifest="cache.manifest" class="no-js lt-ie9" lang="en" ng-app="lennart.Audiowalk"> <![endif]-->
+<!--[if gt IE 8]><!--> <html manifest="cache.manifest" class="no-js" lang="en" ng-app="lennart.Audiowalk"> <!--<![endif]-->
 <head>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta charset="utf-8">
@@ -96,7 +96,6 @@
   <script src="scripts/services/video_player.js"></script>
   <script src="scripts/services/story_board.js"></script>
 
-  <script src="scripts/directives/scroll.js"></script>
   <script src="scripts/directives/video_player.js"></script>
   <!-- endbuild -->
 
