--- a/app/index.html
+++ b/app/index.html
@@ -95,6 +95,7 @@
   <script src="scripts/services/geolocation.js"></script>
   <script src="scripts/services/video_player.js"></script>
   <script src="scripts/services/story_board.js"></script>
+  <script src="scripts/services/places.js"></script>
 
   <script src="scripts/directives/video_player.js"></script>
   <!-- endbuild -->
